# software_renderer

./: CMakeLists.txt  readme.md
libs/glm/glm/detail/: compute_vector_decl.hpp  type_vec3.inl
src/: main.cpp
src/headers/: drawer.h  model.h  tgaimage.h
src/src/: drawer.cpp  model.cpp  tgaimage.cpp
